[gd_scene load_steps=3 format=3 uid="uid://b1h2qdsmpruwi"]

[ext_resource type="Script" uid="uid://dlg4vo7r426n2" path="res://Scenes/intro_scene.gd" id="1_bbocs"]
[ext_resource type="FontFile" uid="uid://7wrq8dvttvik" path="res://Fonts/F25_Executive.otf" id="1_d30j0"]

[node name="IntroScene" type="Node"]
script = ExtResource("1_bbocs")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label1" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -731.0
offset_top = -220.0
offset_right = 731.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_d30j0")
theme_override_font_sizes/normal_font_size = 64
text = "The life of a rat is not easy."
fit_content = true
horizontal_alignment = 1

[node name="Label2" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -731.0
offset_top = -120.0
offset_right = 731.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_d30j0")
theme_override_font_sizes/normal_font_size = 64
text = "You must find valuables from dumpster diving and sell them to afford food."
fit_content = true
horizontal_alignment = 1

[node name="Label3" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -731.0
offset_top = 55.0
offset_right = 731.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_d30j0")
theme_override_font_sizes/normal_font_size = 64
text = "Survive the winter."
fit_content = true
horizontal_alignment = 1
